# bevy_mod_wasm

./: Cargo.toml
examples/core/: Cargo.toml
examples/core/src/: lib.rs
examples/guest/: Cargo.toml
examples/guest/src/: lib.rs
examples/host/: Cargo.toml  build.rs
examples/host/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: guest.rs  host.rs  lib.rs
