[package]
name = "bevy_mod_wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "3"
members = [
    ".",
    "examples/guest",
    "examples/host"
]

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["std", "bevy_log"] }
wasmtime = "46"
anyhow = "1"
