[package]
name = "bevy_mod_wasm_example_host"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["std", "bevy_log"] }
bevy_mod_wasm = { path = "../..", features = ["host"] }
bevy_mod_wasm_example_core = { path = "../core", features = ["host"] }
